@@ -1,4 +1,5 @@
 2006-03-28  Don Allingham  <don@gramps-project.org>
+	* src/gramps_main.py: remove 2.0.X message
 	* src/ViewManager.py: remove expanduser
 	* src/Exporter.py: remove expanduser
 	* src/plugins/BookReport.py: remove expanduser
